# my_rtos_template_forESP

./: CMakeLists.txt  README.MD  sdkconfig.defaults
components/app_framework/: CMakeLists.txt  app_framework.c  app_health.c  app_stats.c
components/app_framework/include/: app_framework.h
components/demos/: CMakeLists.txt  Kconfig  demo_01_scheduler_basics.c  demo_02_starvation_timeslice.c  demo_03_delay_until.c  demo_04_queue_pipeline.c  demo_05_task_notify.c  demo_06_event_group.c  demo_07_priority_inversion.c  demo_08_software_timer.c  demo_09_diagnostics.c  demo_registry.c
components/demos/include/: demo_registry.h
docs/: DEMOS_GUIDE.md
main/: CMakeLists.txt  app_main.c
